2008-01-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* log-edit.el (log-edit): Doc fix.

2008-01-15  Glenn Morris  <rgm@gnu.org>

	* diff-mode.el (diff-end-of-hunk): Revert 2008-01-08 change.

2008-01-14  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-vars.el (c-constant-symbol): New function which
	supersedes c-const-symbol.  During a customize-.. call it enables
	an element of (e.g.) c-hanging-braces alist to have its name
	displayed, even when the default value of c-h-b etc. doesn't
	include the elemnt.  Replace uses of the old function by the new.

	* progmodes/cc-vars.el (c-hanging-braces-alist): Remove the
	obscure non-working fragment ":value c-".

2008-01-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* abbrev.el (clear-abbrev-table): Can't pass a symbol to intern.

2008-01-14  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-local-host-p): Use `tramp-file-name-host'
	instead of `tramp-file-name-real-host'.

	* net/trampver.el: Update release number.

2008-01-14  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-guess-basic-syntax): Prevent a macro
	call inside a struct being recognised as a K&R argument.

2008-01-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Accept "fatal error" from MSFT.
	Reported by Jared Finder <jfinder@crypticstudios.com>.

2008-01-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* smerge-mode.el (smerge-auto): New function.
	* vc-svn.el (vc-svn-find-file-hook):
	* vc-arch.el (vc-arch-find-file-hook):
	* pcvs.el (cvs-revert-if-needed):
	* vc.el (vc-maybe-resolve-conflicts): Use it instead of vc-mode.
	(top-level): Add a Todo list.

2008-01-13  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-update): Resolve conflicts if necessary instead of
	just updating the buffer.

	* vc-cvs.el (vc-cvs-merge-news): Ignore the error status of the
	update command so that we can parse the output.

2008-01-13  Martin Rudalics  <rudalics@gmx.at>
